# cpp-examples

./: README.md
prime-check/: CMakeLists.txt  README.md
prime-check/includes/: log.hpp  primes.hpp
prime-check/src/: log.cpp  main.cpp  primes.cpp
quadractic-roots/: .gitignore  CMakeLists.txt  README.md
quadractic-roots/includes/: discriminant.hpp
quadractic-roots/src/: discriminant.cpp  main.cpp
vowel-checker/: CMakeLists.txt  README.md
vowel-checker/includes/: algorithms.hpp
vowel-checker/src/: algorithms.cpp  main.cpp
